fix: remove horizontal scrollbar from contacts list

--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -132,7 +132,7 @@
 
 @media (max-width: 1260px) {
   .contacts-list-wrap {
-    width: 100vw;
+    width: calc(100vw - 232px);
     height: calc(100vh - 96px);
     padding: 0 24px;
   }
@@ -153,6 +153,10 @@
 @media (max-width: 820px) {
   .contacts-list-wrap {
     height: calc(100vh - 160px);
+  }
+
+  .contacts-list-wrap {
+    width: 100%;
   }
 }
 
